--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </a></li>
           <li><a href="https://www.snapchat.com/add/mr_perfect5692?share_id=2Yn4YicRzlU&locale=en-IN"><ion-icon name="logo-snapchat"></ion-icon>
           </a></li>
-          <li><a href="https://wa.me/qr/4H5FQJYT4MVYM1"><ion-icon name="logo-whatsapp"></ion-icon>
+          <li><a href="https://wa.me/919651891898?text=Hi"><ion-icon name="logo-whatsapp"></ion-icon>
           </a></li>
           <li><a href="https://www.instagram.com/invites/contact/?utm_source=ig_contact_invite&utm_medium=copy_link&utm_content=xzi7hwy"><ion-icon name="logo-instagram"></ion-icon></a></li>
         </ul>
