--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </section>
     <footer>
         <ul class="social_icon">
-          <li><a href="https://www.facebook.com/aryan.trivedi.5439"><ion-icon name="logo-facebook"></ion-icon>
+          <li><a href="https://www.facebook.com/share/19AomM2MhH/"><ion-icon name="logo-facebook"></ion-icon>
           </a></li>
           <li><a href="https://www.snapchat.com/add/mr_perfect5692?share_id=2Yn4YicRzlU&locale=en-IN"><ion-icon name="logo-snapchat"></ion-icon>
           </a></li>
