--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul class="social_icon">
           <li><a href="https://www.facebook.com/share/19AomM2MhH/"><ion-icon name="logo-facebook"></ion-icon>
           </a></li>
-          <li><a href="https://www.snapchat.com/add/mr_perfect5692?share_id=2Yn4YicRzlU&locale=en-IN"><ion-icon name="logo-snapchat"></ion-icon>
+          <li><a href="https://snapchat.com/t/UwzGVM3z"><ion-icon name="logo-snapchat"></ion-icon>
           </a></li>
           <li><a href="https://wa.me/919651891898?text=Hi"><ion-icon name="logo-whatsapp"></ion-icon>
           </a></li>
